--- a/txrx/templates/thing/index.html
+++ b/txrx/templates/thing/index.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
 {% load thumbnail crop_util %}
 
-{% block header_content %}Items recently made at TX/RX{% endblock %}
+{% block title %}Recent Items{% endblock %}
 
 {% block main %}
+<h1 class="page_title">Items recently made at TX/RX</h1>
 <div class="thing_index">
   <div class="things">
     {% for thing in paginator.current_list %}
