--- a/course/templates/course/_enroll_link.html
+++ b/course/templates/course/_enroll_link.html
@@ -22,7 +22,7 @@
   window.SESSIONS_ON_PAGE = window.SESSIONS_ON_PAGE || {};
   window.SESSIONS_ON_PAGE[{{ session.id }}] = {
     'name': "<b>{{ session.section.course }}</b> {{ session.first_date|date:"m/d/Y" }}",
-    'fee': "{{ session.section.fee }}",
+    'fee': "{% if cheating %}1{% else %}{{ session.section.fee }}{% endif %}",
   };
 </script>
 {% else %}
