fixing some bad url syntax

--- a/txrx/templates/post_detail.html
+++ b/txrx/templates/post_detail.html
@@ -15,7 +15,7 @@
 
 {% block content %}
 <div id="post-detail-page">
-  <i class="icon-arrow-left"></i> <a href="{% url post_list post.user.username %}">Latest posts by {{ post.user.username }}</a>
+  <i class="icon-arrow-left"></i> <a href="{% url "post_list" post.user.username %}">Latest posts by {{ post.user.username }}</a>
   {% if post.status != "deleted" %}
   {% include "_post_content.html" with post=post %}
   {% endif %}
