--- a/txrx/templates/comments/_comment_replies.html
+++ b/txrx/templates/comments/_comment_replies.html
@@ -3,10 +3,10 @@
 {% if comment.pk %}
 {% if not comment.is_removed %}
 {% if request.user.is_authenticated %}
-<a class="comment_reply c{{ comment_id }}" href="{% url comment-reply comment.pk %}" title="reply">
+<a class="comment_reply c{{ comment_id }}" href="{% url "comment-reply" comment.pk %}" title="reply">
   <i class="icon-share-alt"></i>
   Post Reply</a> |
-<a class="comment_flag" href="{% url comments-flag comment.pk %}" title="flag">
+<a class="comment_flag" href="{% url "comments-flag" comment.pk %}" title="flag">
   <i class="icon-flag"></i>
   Flag</a>
 {% else %}
