--- a/txrx/templates/comments/_subcomments_remaining.html
+++ b/txrx/templates/comments/_subcomments_remaining.html
@@ -2,7 +2,7 @@
 {% if subcomments_remaining and subcomments %}
 <p>
     {% with subcomments|last as last_subcomment %}
-    <a class="comments_more" href="{% url comments-more-in-tree last_subcomment.pk %}">
+    <a class="comments_more" href="{% url "comments-more-in-tree" last_subcomment.pk %}">
         {% trans "Still" %} <span class="comments_more_remaining">{{ subcomments_remaining }}</span> {% trans "comments left" %}
     </a>
     {% endwith %}
