removing all references to future url imports

--- a/txrx/templates/email/course_reminder.html
+++ b/txrx/templates/email/course_reminder.html
@@ -1,4 +1,4 @@
-{% load i18n %}{% load url from future %}{% autoescape off %}
+{% load i18n %}{% autoescape off %}
 
 This is a reminder that you have a class today at TX/RX Labs. The class starts today ({{ class_time.start|date:"F d" }}) at {{ class_time.start|date:"h:i a" }}.
 
