--- a/txrx/templates/email/pending_evaluation.html
+++ b/txrx/templates/email/pending_evaluation.html
@@ -1,4 +1,4 @@
-{% load i18n %}{% load url from future %}{% autoescape off %}
+{% load i18n %}{% autoescape off %}
 {% trans "You recently took a class at TX/RX Labs. We would like you to evaluate this class to help us to improve our courses. The course evaluation is annonymous and helps instructors improve the class for future students and to help TX/RX decide what classes we want to teach in the future." %}
 
 {% trans "Please go to the following link to evaluate your class." %}
