--- a/txrx/templates/email/welcome_classes.html
+++ b/txrx/templates/email/welcome_classes.html
@@ -1,4 +1,4 @@
-{% load i18n %}{% load url from future %}{% autoescape off %}
+{% load i18n %}{% autoescape off %}
 {% trans "Welcome to TXRX Labs. You're receiving this email because an account was automatically created for you when you signed up for a class. You can use this account to login and verify what classes you've enrolled in. If you sign up for more classes, they will automatically be associated to this email (through your paypal account), so logging in is not necessary to sign up for more classes." %}
 
 {% trans "Please go to the following page and choose a new password:" %}
