--- a/txrx/templates/email/new_classes.html
+++ b/txrx/templates/email/new_classes.html
@@ -1,4 +1,4 @@
-{% load i18n %}{% load url from future %}{% autoescape off %}
+{% load i18n %}{% autoescape off %}
 
 We're writting to let you know about all the new classes at TX/RX. Here are all the classes added in the past two weeks:
 
