--- a/txrx/templates/registration/password_reset_email.html
+++ b/txrx/templates/registration/password_reset_email.html
@@ -1,4 +1,4 @@
-{% load i18n %}{% load url from future %}{% autoescape off %}
+{% load i18n %}{% autoescape off %}
 {% trans "Welcome to TXRX Labs. You're receiving this email because your password has been reset." %}
 
 {% trans "Please go to the following page and choose a new password:" %}
