changing the rsvp a bit

--- a/txrx/static/less/txrx.less
+++ b/txrx/static/less/txrx.less
@@ -274,6 +274,7 @@ label .help-text {
 }
 
 .RsvpLink {
+  overflow: hidden;
   .is_full,.unrsvp { display: none; }
   &.attending {
     .unrsvp { display: inline-block; }
