--- a/tool/templates/tool/tool_detail.html
+++ b/tool/templates/tool/tool_detail.html
@@ -6,19 +6,19 @@
 {% block header_content %}{{ lab }} Tools{% endblock %}
 
 {% block content %}
-<div id="tool_{{ lab.slug }}" class="row">
-  {% for tool in lab.tool_set.all %}
-  <div class="tool_well col-sm-4 col-xs-12">
-    {% thumbnail tool.first_photo|get_override:"square_crop" "220x220" crop="center" as im %}
-    <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" />
-    {% endthumbnail %}
+<div id="tool_{{ tool.slug }}">
+  {% thumbnail tool.photo|get_override:"square_crop" "220x220" crop="center" as im %}
+  <div class="tool row">
+    <div class="side">
+      <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" />
+    </div>
     <div class="span5 content">
-      <h3>{{ tool }}</h3>
+      <h2>{{ tool }}</h2>
       {% if tool.make or tool.model %}
       <h4>{{ tool.make|default:"" }} {{ tool.model|default:"" }}</h4>
       {% endif %}
       {{ tool.description|explosivo }}
-      {% if tool.toollink_set.count %}
+      {% if tool.toollink_set.all %}
       <h4>Related Links:</h4>
       {% for link in tool.toollink_set.all %}
       <a href="{{ link.url }}">{{ link.title }}</a><br />
@@ -26,7 +26,6 @@
       {% endif %}
     </div>
   </div>
-  {% endfor %}
-  <div style="clear:both;"></div>
+  {% endthumbnail %}
 </div>
 {% endblock %}
