--- a/txrx/static/less/base.less
+++ b/txrx/static/less/base.less
@@ -11,5 +11,6 @@
 @import "blog.less";
 @import "slideshow.less";
 @import "home.less";
+@import "tool.less";
 @import "calendar.less";
 @import "course.less";
