--- a/txrx/templates/thing/detail.html
+++ b/txrx/templates/thing/detail.html
@@ -6,7 +6,7 @@
 {% block title %}{{ thing }} by {{ thing.user }}{% endblock %}
 
 {% block main %}
-<div class="narrow_page">
+<div class="row">
   <div class="col-sm-8">
     <div class="thing_detail">
       {% include "widgets/thing_slideshow.html" %}
