--- a/txrx/templates/base.html
+++ b/txrx/templates/base.html
@@ -100,6 +100,11 @@
       {% else %}
       <a href="?set_theme=dark">The Darkness Calls</a>
       {% endif %}
+      {% if "kojo" in request.user.username|lower or request.user.is_superuser %}
+      <a href="http://www.google.com/calendar/render?cid=http://txrxlabs.org/classes/ics/my_classes.ics">
+        FUCKING KO-MOTHER-FUCKING-JO
+      </a>
+      {% endif %}
     </div>
   </body>
 </html>
