--- a/txrx/templates/base.html
+++ b/txrx/templates/base.html
@@ -101,8 +101,9 @@
       <a href="?set_theme=dark">The Darkness Calls</a>
       {% endif %}
       {% if "kojo" in request.user.username|lower or request.user.is_superuser %}
+      |
       <a href="http://www.google.com/calendar/render?cid=http://txrxlabs.org/classes/ics/my_classes.ics">
-        FUCKING KO-MOTHER-FUCKING-JO
+        My class schedule (ics)
       </a>
       {% endif %}
     </div>
