--- a/txrx/static/less/tool.less
+++ b/txrx/static/less/tool.less
@@ -1,7 +1,13 @@
 .tool_well {
-  padding-bottom: 10px;
   .content { 
-    height: 90px;
+    height: 56px;
     overflow: hidden;
+  }
+  img {
+    height: auto;
+    width: 100%;
+  }
+  a.well {
+    display: block;
   }
 }
