--- a/txrx/static/less/txrx.less
+++ b/txrx/static/less/txrx.less
@@ -39,7 +39,6 @@ h1.page_title {
     position: absolute;
     top: 0;
     right: 0;
-    a { color: inherit; }
   }
 }
 
@@ -332,6 +331,8 @@ h4{font-size:14px;}
 h4 small{font-size:12px;}
 h5{font-size:12px;}
 h6{font-size:11px;color:#999999;text-transform:uppercase;}
+p,h1,h2,h3,h4,h5,h6{a{color: @link-color; }}
+
 
 /* events */
 .paginator {
