--- a/course/templates/course/_add_to_calendar.html
+++ b/course/templates/course/_add_to_calendar.html
@@ -1,29 +1,54 @@
 <div class="add_to_calendar">
-  <div class="left">
-    <div class="header">
-      <img alt="Google Icon" src="{{ STATIC_URL }}event/icons/google.png"/>
-      Google Calendar
+  <div class="inner">
+    <h3>Subscribe to calendar:</h3>
+    <div class="row">
+      {% for protocol in calendar_protocols %}
+      <div class="col-sm-6">
+        <div class="header">
+          {% if forloop.first %}
+          <img alt="Google Icon" src="{{ STATIC_URL }}event/icons/google.png"/>
+          Google Calendar
+          {% else %}
+          <img alt="Outlook Icon" src="{{ STATIC_URL }}event/icons/outlook.png"/>
+          <img alt="Apple iCal Icon" src="{{ STATIC_URL }}event/icons/ical.png"/>
+          <b>Anything Else</b>
+          {% endif %}
+        </div>
+        {% if calendar_context == "classes" %}
+        <ul>
+          {% if calendar_event %}
+          <li><a href="{{ protocol }}{{ calendar_event.get_ics_url }}" target="_blank">
+              This class only</a></li>
+          {% endif %}
+          {% if my_classes_ics %}
+          <li><a href="{{ protocol }}{{ my_classes_ics }}" target="_blank">
+              "My Classes" Calendar</a></li>
+          {% endif %}
+          <li><a href="{{ protocol }}{{ all_classes_ics }}" target="_blank">
+              TX/RX Classes Calendar</a></li>
+        </ul>
+        {% else %}
+        <ul>
+          {% if calendar_event %}
+          <li><a href="{{ protocol }}{{ calendar_event.get_ics_url }}" target="_blank">
+              This event only</a></li>
+          {% endif %}
+          {% if calendar_event.event %}
+          <li><a href="{{ protocol }}{{ calendar_event.event.get_ics_url }}" target="_blank">
+              All "{{ calendar_event.short_name }}" events</a></li>
+          {% endif %}
+          <li><a href="{{ protocol }}{{ all_ics }}" target="_blank">
+              TX/RX Events Calendar
+          </a></li>
+        </ul>
+        {% endif %}
+      </div>
+      {% endfor %}
     </div>
-    <ul>
-      <li><a href="{{ google_calendar_url }}http://{{ calendar_event.get_ics_url|urlencode }}" target="_blank">
-          Add this class</a></li>
-      <li><a href="{{ google_calendar_url }}http://{{ all_classes_ics|urlencode }}" target="_blank">
-          Subscribe to TX/RX Classes Calendar
-      </a></li>
-    </ul>
+    <hr />
+    <center>
+      <button class="btn btn-danger" onclick="$(this).closest('.add_to_calendar').hide()">Cancel</button>
+    </center>
   </div>
-  <div class="right">
-    <div class="header">
-      <img alt="Outlook Icon" src="{{ STATIC_URL }}event/icons/outlook.png"/> Outlook,
-      <img alt="Apple iCal Icon" src="{{ STATIC_URL }}event/icons/ical.png"/> iCal,
-      or <b>Anything Else</b>
-    </div>
-    <ul>
-      <li><a href="webcal://{{ calendar_event.get_ics_url }}" target="_blank">
-          Add this class</a></li>
-      <li><a href="webcal://{{ all_classes_ics }}" target="_blank">
-          Subscribe to TX/RX Classes Calendar
-      </a></li>
-    </ul>
-  </div>
+  <div class="fixed_overlay" onclick="$(this).parent().hide();"></div>
 </div>
