--- a/event/templates/event/index.html
+++ b/event/templates/event/index.html
@@ -3,16 +3,18 @@
 {% block full_title %}Events at TX/RX{% endblock %}
 {% block header_content %}
 Events at TX/RX
-<div class="calendar_widget" style="display: inline-block; padding-left: 50px; font-size:0.7em;">
-  (<a href="javascript:;" onclick="$('.add_to_calendar').toggle()">Subscribe to calendar</a>)
-  {% include "event/_subscribe_to_calendar.html" %}
-</div>
 {% endblock %}
 
 {% block main %}
 <div class="paginator">
   <a class="left" href="{% url "event:index" previous|date:"Y-m-d" %}">&laquo; Previous Month</a>
-  <strong>{{ current_date|date:"F Y" }}</strong>
+  <strong>
+    {{ current_date|date:"F Y" }}
+    <div class="calendar_widget" style="display: inline-block; padding-left: 50px; font-size:0.7em;">
+      (<a href="javascript:;" onclick="$('.add_to_calendar').toggle()">Subscribe to calendar</a>)
+      {% include "course/_add_to_calendar.html" %}
+    </div>
+  </strong>
   <a class="right" href="{% url "event:index" next|date:"Y-m-d" %}">Next Month &raquo;</a>
 </div>
 <div id="calendar">
