--- a/event/templates/event/occurrence_detail.html
+++ b/event/templates/event/occurrence_detail.html
@@ -11,7 +11,7 @@
   <p class="lead">{{ occurrence.start }}{% if occurrence.end %} - {{ occurrence.end.time }}{% endif %}</p>
   <div class="calendar_widget">
     <a href="javascript:;" onclick="$('.add_to_calendar').toggle()">Add to calendar</a>
-    {% include "event/_add_to_calendar.html" with calendar_event=occurrence %}
+    {% include "course/_add_to_calendar.html" with calendar_event=occurrence %}
   </div>
   <p>{{ occurrence.description|explosivo }}</p>
 </div>
