--- a/txrx/templates/registration/logged_out.html
+++ b/txrx/templates/registration/logged_out.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load i18n grp_tags %}
+{% load i18n %}
 
 {% block title %}{{ title }}{% endblock %}
 {% block header_content %}{{ title }}{% endblock %}
