--- a/course/templates/course/_enroll_link.html
+++ b/course/templates/course/_enroll_link.html
@@ -26,7 +26,7 @@
   };
 </script>
 {% else %}
-<div class="price">$0</div>
+<div class="price">FREE</div>
 <div class="RsvpLink{% if session.user_enrollment %} attending{% endif %}">
   {% if session.archived %}
   <button class="btn btn-default disabled">CLOSED</button>
