initial jvFloat commit

--- a/txrx/static/less/txrx.less
+++ b/txrx/static/less/txrx.less
@@ -336,6 +336,12 @@ h2.section_title {
   }
 }
 
+.jvFloat {
+  display: block !important;
+  .placeHolder { top: -3px !important; }
+  input { display: block; }
+}
+
 .evaluation_form .top {
   margin: 0 15px 10px 250px;
   min-height: 10px;
