--- a/txrx/templates/base.html
+++ b/txrx/templates/base.html
@@ -24,13 +24,19 @@
     <script src="{{ STATIC_URL }}js/jsi18n.js"></script>
     <script src="{{ STATIC_URL }}mptt_comments/js/mptt_comments.js"></script>
     <script src="{{ STATIC_URL }}js/favico.js"></script>
+    <script src="{{ STATIC_URL }}js/jvfloat.js"></script>
     {% endcompress %}
     <link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}lightbox/css/lightbox.css" />
+    <link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}css/jvfloat.css" />
     <script>
       var f = new Favico({
         animation : 'popFade'
       });
       f.badge({{ pending_evaluations.count }});
+      $(function(){
+        $(".jvFloatForm [placeholder]").jvFloat();
+        console.log($(".jvFloatForm"))
+      });
     </script>
     {% block head %}{% endblock %}
     <!--[if lt IE 9]>
