--- a/txrx/templates/registration/_login_form.html
+++ b/txrx/templates/registration/_login_form.html
@@ -1,22 +1,23 @@
-<form action="/accounts/login/" method="post" id="login-form">
+<form action="/accounts/login/" method="post" id="login-form" class="jvFloatForm">
   {% csrf_token %}
   {% if form.errors %}<p class="error">Username and password did not match.</p>{% endif %}
-  <div class="form-row">
+  <div class="form-group">
     {% if not form.this_is_the_login_form.errors %}{{ form.username.errors }}{% endif %}
-    <label for="id_username" class="required">Username:</label> {{ form.username }}
+    <input id="id_username" maxlength="254" name="username" type="text" {% if form.username.value %}
+           value="{{ form.username.value }}"{% endif %} placeholder="username or email" />
   </div>
-  <div class="form-row">
+  <div class="form-group">
     {% if not form.this_is_the_login_form.errors %}{{ form.password.errors }}{% endif %}
-    <label for="id_password" class="required">Password:</label> {{ form.password }}
+    <input id="id_password" name="password" type="password" placeholder="password">
     <input type="hidden" name="this_is_the_login_form" value="1" />
     <input type="hidden" name="next" value="{% if request.GET.next %}{{ request.GET.next }}{% else %}/{% endif %}" />
   </div>
   {% if bad_password %}
-  <div class="form-row">
+  <div class="form-group">
     Incorrect username/password, try again.
   </div>
   {% endif %}
-  <div class="submit-row">
+  <div class="form-group">
     <label>&nbsp;</label><input type="submit" value="Log in" />
   </div>
   <div>
