nav text-transform on .auth

--- a/txrx/static/less/nav.less
+++ b/txrx/static/less/nav.less
@@ -10,7 +10,7 @@
 }
 .dropdown-menu { top: 75%; }
 .navbar-nav { text-transform: uppercase; }
-.nav .auth {
+.navbar .auth {
   overflow: visible;
   text-transform: none;
   white-space: nowrap;
