adding courses and things to tool detail

--- a/tool/templates/tool/tool_detail.html
+++ b/tool/templates/tool/tool_detail.html
@@ -29,8 +29,9 @@
 {% endblock %}
 
 {% block side %}
-{% if tool.get_classes or tool.get_things %}
-TODO
+{% if tool.courses or tool.things %}
+{% include "_generic_box.html" with items=tool.courses title="Related Courses" %}
+{% include "_generic_box.html" with items=tool.things title="Related Things" %}
 {% else %}
 {{ block.super }}
 {% endif %}
