--- a/txrx/static/less/slideshow.less
+++ b/txrx/static/less/slideshow.less
@@ -27,6 +27,35 @@
   }
 }
 
+.slideshow {
+  .slide {
+    position: relative;
+  }
+  .external {
+    display: block;
+    color: white;
+    font-size: 50px;
+    height:50px;
+    left: 50%;
+    margin: -25px 0 0 -25px;
+    opacity: 0.75;
+    position: absolute;
+    text-shadow: 0 0 10px rgba(50,50,50,0.5);
+    top: 50%;
+    width: 50px;
+    z-index: 1;
+    &:hover { opacity: 1; }
+  }
+  iframe {
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: 2;
+  }
+}
+
 .course-detail .slideshow {
   a { width: 25%; }
 }
