--- a/txrx/templates/widgets/thing_slideshow.html
+++ b/txrx/templates/widgets/thing_slideshow.html
@@ -2,21 +2,38 @@
 {% if thing.get_photos %}
 <div class="slideshow">
   <div class="active_slide">
-    {% thumbnail thing.first_photo|get_override:"landscape_crop" "750x500" crop="center" as im %}
-    <img src="{{ im.url }}" width="750" height="500" />
+    {% for photo in thing.get_photos %}
+    {% thumbnail photo|get_override:"landscape_crop" "750x500" crop="center" as im %}
+    <div class="slide"{% if not forloop.first %} style="display:none;"{% endif %}>
+      <img src="{{ im.url }}" width="750" height="500" />
+      {% if photo.external_url %}
+      <a href="{{ photo.external_url }}" class="external {{ photo.external_type }}"
+         onclick="iframeExternal(this);return false">
+        <span class="glyphicon glyphicon-play"</span></a>
+      {% endif %}
+    </div>
     {% endthumbnail %}
+    {% endfor %}
   </div>
   {% if thing.get_photos|length > 1 %}
   <div class="slide-nav">
     {% for photo in thing.get_photos %}
     {% thumbnail photo|get_override:"square_crop" "100x100" crop="center" as im %}
-    {% thumbnail photo|get_override:"landscape_crop" "750x500" crop="center" as large %}
-    <a href="javascript:;" onclick="$('.active_slide img').attr('src','{{ large.url }}')">
+    <a href="javascript:;" onclick="$(this).closest('.slideshow').find('.slide').hide().eq({{ forloop.counter0 }}).show();">
       <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" /></a>
-    {% endthumbnail %}
     {% endthumbnail %}
     {% endfor %}
   </div>
   {% endif %}
 </div>
+<script>
+function iframeExternal(that) {
+  url = that.href;
+  if ($(that).hasClass("gfycat")) {
+    var url = "/gfycat/?url="+escape(that.href);
+  }
+  var iframe = $('<iframe src="'+url+'" frameborder="0" scrolling="no">')
+  $(that).closest('.slide').append(iframe);
+}
+</script>
 {% endif %}
