--- a/txrx/static/less/slideshow.less
+++ b/txrx/static/less/slideshow.less
@@ -10,6 +10,7 @@
     overflow: hidden;
     a {
       float: left;
+      position: relative;
       width: 20%;
       img { height: auto; padding: 5px; width: 100%; }
     }
@@ -28,31 +29,47 @@
 }
 
 .slideshow {
-  .slide {
-    position: relative;
-  }
   .external {
     display: block;
     color: white;
-    font-size: 50px;
-    height:50px;
     left: 50%;
-    margin: -25px 0 0 -25px;
-    opacity: 0.75;
     position: absolute;
-    text-shadow: 0 0 10px rgba(50,50,50,0.5);
+    text-align: center;
     top: 50%;
-    width: 50px;
-    z-index: 1;
-    &:hover { opacity: 1; }
+    z-index: 1;    
   }
-  iframe {
-    height: 100%;
-    left: 0;
-    position: absolute;
-    top: 0;
-    width: 100%;
-    z-index: 2;
+  .gfycat,.video { &:before { content: "\e072";} }
+  .slide {
+    position: relative;
+    .external {
+      font-size: 50px;
+      height:50px;
+      line-height:50px;
+      margin: -25px 0 0 -25px;
+      opacity: 0.75;
+      text-shadow: 0 0 10px rgba(50,50,50,0.5);
+      width: 50px;
+      &:hover { opacity: 1; }
+      &.youtube { background: url(/static/img/yt_med.png) no-repeat center; }
+    }
+    iframe {
+      height: 100%;
+      left: 0;
+      position: absolute;
+      top: 0;
+      width: 100%;
+      z-index: 2;
+    }
+  }
+  .slide-nav {
+    .external {
+      font-size: 20px;
+      height: 20px;
+      line-height: 20px;
+      margin: -10px 0 0 -10px;
+      width: 20px;
+      &.youtube { background: url(/static/img/yt_small.png) no-repeat center; }
+    }
   }
 }
 
