--- a/course/templates/course/evaluation_form.html
+++ b/course/templates/course/evaluation_form.html
@@ -1,27 +1,42 @@
 {% extends "base.html" %}
+{% load txrx_tags %}
 
 {% block full_title %}Course Evaluation{% endblock %}
 {% block header_content %}
-Evaluate {{ enrollment.session.section.course }} ({{ enrollment.session.first_date }})
+Evaluate {{ enrollment.session.section.course }}
 {% endblock %}
 
 {% block content %}
+<h3>{{ enrollment.session.first_date }}</h3>
+<br />
 <form action="." method="POST" class="evaluation_form">
   {% csrf_token %}
-  <div class="top">
-    <div class="scale l">Did not meet expetactions</div>
-    <div class="scale">Met Expectations</div>
-    <div class="scale r">Exceeded Expectations</div>
-  </div>
+  {% for error in form.non_field_errors %}
+  <div class="alert alert-danger">{{ error }}</div>
+  {% endfor %}
   {% for field in form %}
-  <div class="{{ field.auto_id }} _row{% if "Comments" in field.label %} comments{% endif %}{% if field.field.required %} required {% endif %}">
+  <div class="form-group {% if field.errors %}has-error{% endif %}">
+    {% if field|is_checkbox %}
+    {{ field }}
+    {{ field.label_tag }}
+    {% elif field|is_select %}
     {{ field.label_tag }}
     {{ field }}
-    {% if field.errors %}{{ field.errors }}{% endif %}
-    {% if field.help_text %}
-    <div class="help_text">{{ field.help_text }}</div>
+    {% else %}
+    {{ field }}
     {% endif %}
+    {% for error in field.errors %}
+    <div class="alert alert-danger">{{ error }}</div>
+    {% endfor %}
+    <div class="help-block">
+      {% if field.help_text %}
+      {{ field.help_text|safe|linebreaksbr }}
+      {% endif %}
+    </div>
   </div>
+  {% if "comments" in field.label %}
+  <hr />
+  {% endif %}
   {% endfor %}
   <input type="submit" />
 </form>
